--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
 
+<div id="bg-color" class="banner"></div>
 
 
-<script type="text/javascript" src="js/script.js">
 
+
+
+<!-- scripts begin -->
+<!-- <script type="text/javascript" src="js/script.js">
 </script> 
+<script type="text/javascript" src="js/loops.js">
+</script>  
+<script type="text/javascript" src="js/functions-methods.js">
+</script>  -->
+<script type="text/javascript" src="js/bg-change.js">
+</script>
 <!-- keep script on the bottom of the body -->
 
 </body>
